// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All kinds 1`] = `
HTMLCollection [
  <div
    class="s-WFVnM7df3-nu centered"
    style="top: 125px; left: 150px;"
  >
    Gaspard
  </div>,
  <div
    class="s-WFVnM7df3-nu"
    style="top: 125px; left: 150px;"
  >
    3
  </div>,
  <figure
    class="s-engCJu8q-fNe positioned"
    style="--dimension: 60px; --color: null; --top: -125px; --left: -150px; --border-width: 3px"
  >
    <img
      alt="avatar for Gaspard"
      class="s-engCJu8q-fNe"
      height="60"
      width="60"
    />
     
    <figcaption
      class="s-engCJu8q-fNe"
    >
      Gaspard
    </figcaption>
  </figure>,
  <div
    class="s-8tykIykLMKjy"
    style="top: 200px; left: 50px;"
  >
    <span
      class="material-icons s-8tykIykLMKjy"
    >
      layers
    </span>
    
  </div>,
  <div
    class="s-8tykIykLMKjy"
    style="top: 200px; left: 100px;"
  >
    <span
      class="material-icons s-8tykIykLMKjy"
    >
      
    </span>
    Jane
  </div>,
]
`;

exports[`Feedback for action 1`] = `
<div
  class="s-8tykIykLMKjy"
  style="top: 200px; left: 50px;"
>
  <span
    class="material-icons s-8tykIykLMKjy"
  >
    layers
  </span>
  
</div>
`;

exports[`Feedback for player 1`] = `
<div
  class="s-8tykIykLMKjy"
  style="top: 200px; left: 50px;"
>
  <span
    class="material-icons s-8tykIykLMKjy"
  >
    
  </span>
  Jane
</div>
`;

exports[`For player 1`] = `
<div
  class="s-WFVnM7df3-nu centered"
  style="top: 125px; left: 150px;"
>
  Gaspard
</div>
`;

exports[`Multiple 1`] = `
HTMLCollection [
  <div
    class="s-WFVnM7df3-nu"
    style="top: 100px; left: 50px;"
  >
    5
  </div>,
  <div
    class="s-WFVnM7df3-nu"
    style="top: 200px; left: 150px;"
  >
    27
  </div>,
]
`;

exports[`Peer pointer 1`] = `
<figure
  class="s-engCJu8q-fNe positioned"
  style="--dimension: 60px; --color: null; --top: -125px; --left: -150px; --border-width: 3px"
>
  <img
    alt="avatar for Gaspard"
    class="s-engCJu8q-fNe"
    height="60"
    width="60"
  />
   
  <figcaption
    class="s-engCJu8q-fNe"
  >
    Gaspard
  </figcaption>
</figure>
`;

exports[`Single 1`] = `
<div
  class="s-WFVnM7df3-nu"
  style="top: 100px; left: 50px;"
>
  5
</div>
`;
